# improved-patterns

./: .gitignore  CLAUDE.md
.specify/memory/: constitution.md
improved-patterns/: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
improved-patterns/cli/: __init__.py  config_loader.py  main.py  pattern_index.py  runner.py  test_runner.py  viewer.py
improved-patterns/config/: categories.json  cli_commands.json  patterns.json  schema.json
improved-patterns/docs/: index.md
improved-patterns/docs/behavioral/: observer.md
improved-patterns/docs/creational/: abstract_factory.md  builder.md  factory.md  lazy_evaluation.md  pool.md  prototype.md  singleton.md
improved-patterns/patterns/: __init__.py
improved-patterns/patterns/behavioral/: observer.py
improved-patterns/patterns/creational/: abstract_factory.py  builder.py  factory.py  lazy_evaluation.py  pool.py  prototype.py  singleton.py
improved-patterns/tests/test_behavioral/: test_observer.py
improved-patterns/tests/test_creational/: test_abstract_factory.py  test_builder.py  test_factory.py  test_lazy_evaluation.py  test_pool.py  test_prototype.py  test_singleton.py
reference/: README.md
specs/001-improved-patterns/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-improved-patterns/checklists/: requirements.md
specs/001-improved-patterns/contracts/: cli-contract.md
